vlib/v/checker/tests/or_block_selector_cast_wrong_default_type_err.vv
struct SelectorCastHolder {
	x ?f64
}

fn main() {
	h := SelectorCastHolder{}
	_ := int(h.x or { 'bad' })
}
